@@ -2,7 +2,7 @@
 # Simple greylisting config file using the new features
 # See greylist2.conf for a more detailed list of available options
 #
-# $Id: greylist.conf,v 1.37 2006/08/20 04:49:49 manu Exp $
+# $Id: greylist.conf,v 1.38 2006/09/20 07:50:09 manu Exp $
 #
 
 pidfile "/var/run/milter-greylist.pid"
@@ -93,5 +93,6 @@ list "grey users" rcpt {  \
 acl whitelist list "my network"
 acl whitelist list "broken mta"
 #acl greylist list "grey users" dnsrbl "SORBS DUN" delay 24h autowhite 3d
+acl greylist list "grey users" delay 30m autowhite 3d
 acl greylist list "grey users" delay 30m autowhite 3d
 acl whitelist default
