@@ -1,4 +1,5 @@
 3.1.1
+	Warn about ignored ACL lines after acl default rule
 	Fix various race conditions (AIDA Shinra)
 	Fix big bugs in macro support (AIDA Shinra)
 	Fix build warning on Tru64
